added android support.

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,5 +5,7 @@ graalHelperVersion=2.0.1
 gwtFrameworkVersion=2.11.0
 gwtPluginVersion=1.1.29
 enableGraalNative=false
+android.useAndroidX=true
+android.enableR8.fullMode=false
 gdxVersion=1.13.1
 projectVersion=1.0.0
